JumpScript/tests/baselines/reference/parserComputedPropertyName1.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName1.jump(1,12): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName1.jump(1,15): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName1.jump (2 errors) ====
    var v = { [e] };
               ~
!!! error TS2304: Cannot find name 'e'.
                  ~
!!! error TS1005: ':' expected.